# Generated by Django 5.2.17 on 2026-09-20 10:42

import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('organizations', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='MediaAsset',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(default=django.utils.timezone.now, editable=False)),
                ('type', models.CharField(choices=[('image', 'Image'), ('audio', 'Audio')], max_length=10)),
                ('status', models.CharField(choices=[('pending', 'Pending'), ('ready', 'Ready'), ('failed', 'Failed')], default='pending', max_length=12)),
                ('storage_key', models.CharField(max_length=500, unique=True)),
                ('original_filename', models.CharField(max_length=255)),
                ('mime_type', models.CharField(max_length=100)),
                ('byte_size', models.BigIntegerField()),
                ('duration_seconds', models.DecimalField(blank=True, decimal_places=3, max_digits=12, null=True)),
                ('rights_notes', models.TextField(blank=True, default='')),
                ('organization', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='media_assets', to='organizations.organization')),
                ('uploaded_by', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='uploaded_media_assets', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'media_assets',
            },
        ),
    ]
